@@ -1,5 +1,6 @@
 From version 0.5.7 to 0.5.8
 - detect registration from ephemeral ports.
+- auto-detect interfaces and local subnets.
 
 From version 0.5.6 to 0.5.7
 - ability to disable install of init.d.
